add hotfix for enums cast

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:55435/soul_mate
+spring.datasource.url= jdbc:postgresql://localhost:55435/soul_mate?stringtype=unspecified
 spring.datasource.username= postgres
 spring.datasource.password= 1234
 
