--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -26,10 +26,11 @@ services:
 
   test_data:
     build: .
+    restart: always
     environment:
       - DATABASE_URL=postgresql://postgres:1234@db/soul_mate
     entrypoint: /bin/bash
-    command: -c "python data/add_test_data.py"
+    command: -c "while ! pg_isready -h db; do sleep 1s; done && python data/add_test_data.py"
     depends_on:
       - migration
       - db
